--- a/index.html
+++ b/index.html
@@ -12,10 +12,27 @@
         <script rel="preconnect" src="https://kit.fontawesome.com/0eae2a52d3.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Website Development and E-Commerce Services for SMEs | Sybiltech</title>       
-        <meta name="Description" content="Sybil Mayard of Sybiltech provides website development and e-commerce 
-        services for your business. WordPress, Shopify, Wix and Squarespace. Enquire now.">
+        <title>Web Development &amp; E-Commerce Services for SMEs | Sybiltech</title>       
+        <meta name="Description" content="Sybil Mayard provides web development services for SMEs 
+            in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review.">
         <meta name="robots" content="noindex">
+        <meta property="og:locale" content="en_GB" />
+        <meta property="og:type" content="website" />
+        <meta property="og:title" content="Web Development &amp; E-Commerce Services for SMEs | Sybiltech" />
+        <meta property="og:description" content="Sybil Mayard provides web development services 
+            for SMEs in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review." />
+        <meta property="og:url" content="https://sybilmayard.tech/" />
+        <meta property="og:site_name" content="Sybiltech" />
+        <meta property="og:image" content="favicon.png" />
+        <meta name="twitter:card" content="summary_large_image" />
+        <meta name="twitter:creator" content="@Sybiltech1" />
+        <meta name="twitter:site" content="@sybiltech1" />
+        <meta name="twitter:label1" content="Written by">
+        <meta name="twitter:data1" content="Sybil Mayard">
+        <meta name="twitter:label2" content="Estimated reading time">
+        <meta name="twitter:data2" content="2 minutes">
+        <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
+        <link rel="canonical" href="https://sybilmayard.tech/" />
         <link rel="stylesheet" href="styles.css" type="text/css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
@@ -35,44 +52,44 @@
             <div class="container-1000 center">
                 <div class="topnav" id="myTopnav">
                     <a href="/">Home</a>                    
-                    <a href="/events">Events</a>
-                    <a href="/shopify">Shopify Course</a>                   
+                    <a href="events.html">Events</a>
+                    <a href="building-business-shopify.html">Shopify Course</a>                   
                     <div class="dropdown">
                         <button class="dropbtn">About
-                          <i class="fa fa-caret-down"></i>
+                            <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                          <a href="/about">About</a>
-                          <a href="/clients">Clients</a>
-                          <a href="/services">Services</a>
-                          <a href="/faqs">FAQs</a>
+                            <a href="about.html">About</a>
+                            <a href="clients.html">Clients</a>
+                            <a href="services.html">Services</a>
+                            <a href="faqs.html">FAQs</a>
                         </div>
                     </div>                    
                     <div class="dropdown">
                         <button class="dropbtn">Projects
-                          <i class="fa fa-caret-down"></i>
+                            <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                          <a href="/vidcareer">VidCareer</a>
-                          <a href="/an-android-app-for-an-educational-poker-platform">An Android App for an Educational Poker Platform</a>
-                          <a href="/tagnav">TagNav</a>
-                          <a href="/my-personal-portfolio">My Personal Portfolio</a>
+                            <a href="vidcareer.html">VidCareer</a>
+                            <a href="an-android-app-for-an-educational-poker-platform.html">An Android App for an Educational Poker Platform</a>
+                            <a href="tagnav.html">TagNav</a>
+                            <a href="my-personal-portfolio.html">My Personal Portfolio</a>
                         </div>
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">Blog
-                          <i class="fa fa-caret-down"></i>
+                            <i class="fa fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content">
-                          <a href="/6-reasons-to-use-shopify">6 Reasons Why You Should Be Using Shopify</a>
-                          <a href="/webtip-wednesday-series-lauched-on-twitter">WebTip Wednesday Series Launched on Twitter</a>
-                          <a href="/5-best-tools-for-remote-working">5 Best Tools For Remote Working</a>
-                          <a href="/6-tips-for-surviving-remote-working">6 Tips For Surviving Remote Working</a>
+                            <a href="6-reasons-to-use-shopify.html">6 Reasons Why You Should Be Using Shopify</a>
+                            <a href="webtip-wednesday-series-launched-on-twitter.html">WebTip Wednesday Series Launched on Twitter</a>
+                            <a href="5-best-tools-for-remote-working.html">5 Best Tools For Remote Working</a>
+                            <a href="6-tips-for-surviving-remote-working.html">6 Tips For Surviving Remote Working</a>
                         </div>
                     </div>
-                    <a href="/contact">Contact</a>
+                    <a href="contact.html">Contact</a>
                     <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                    <i class="fa fa-bars"></i>
+                        <i class="fa fa-bars"></i>
                     </a>
                 </div>
             </div>
@@ -81,12 +98,13 @@
             <div class="container-1000">
                 <h4>Taking your online business further...</h4>
                 <h1>Sybiltech</h1>
-                <p>A freelance IT consultant who can help you achieve your goals.</p>
+                <p class="padding-bottom">A freelance IT consultant who can help you achieve your goals.</p>
+                <a class="btn-primary" href="services">More Info</a>
             </div>
         </div>
         <div class="services section">
             <div class="container-1000">
-                <h2>What Do I Offer?</h2>
+                <h2 class="center">What Do I Offer?</h2>
                 <hr>
                 <p class="container-700 padding-top center">If you’re looking for help with setting up a website for the first time, or 
                     you have an existing site that you want to optimise, I offer a service that’s 
@@ -94,57 +112,57 @@
                 <div class="row">
                     <div class="col-6">
                         <div class="center">
-                            <i class="fas fa-clipboard-check"></i></div>
+                            <i class="fas fa-clipboard-check"></i>
                         <h3>Free Website Review</h3>
                         <p>A detailed report with feedback on the main aspects of your site's user 
                             experience, search engine optimisation (SEO) and design. Recommended 
                             improvements are provided.</p>
+                        </div>
                     </div>
                     <div class="col-6">
                         <div class="center">
                             <i class="fas fa-code"></i>
-                        </div>
+                        
                     <h3>Website Development</h3>
                     <p>Bespoke website development services tailored to your needs, ranging from 
                         one-off tasks, to regular website maintenance work, to a full website refresh.</p>
                     </div>
+                    </div>
                 </div>
                 <div class="center padding-bottom">
-                    <a class="btn-primary" href="/services">View Services</a>   
+                    <a class="btn-primary" href="services">View Services</a>   
                 </div>
             </div>
         </div>
         <div class="clients section grey">
-            <div class="">
-                <h2>Portfolio</h2>
-                <hr>
-                <p class="container-700 padding-top center">A selection of clients I have recently worked with:</p>
-                <div class="row">
-                    <div class="col-3">                        
-                        <img src="images/clients/Audrey-Zeitoun-Coaching.png" alt="Audrey Zeitoun Coaching">
-                        <h4>Audrey Zeitoun Coaching</h4>
-                    </div>
-                    <div class="col-3">                    
-                    <img src="images/clients/KYOSK.png" alt="KYOSK">
-                    <h4>KYOSK</h4>
-                    </div>
-                    <div class="col-3">                       
-                        <img src="images/clients/Pathways-21.png" alt="Pathways 21">
-                        <h4>Pathways 21</h4>
-                    </div>
-                    <div class="col-3">                    
-                    <img src="images/clients/The-GDPR-Compliance-Consultancy.png" alt="The GDPR Compliance Consultancy">
-                    <h4>The GDPR Compliance Consultancy</h4>
-                    </div>
+            <h2>Portfolio</h2>
+            <hr>
+            <p class="container-700 padding-top center">A selection of clients I have recently worked with:</p>
+            <div class="row">
+                <div class="col-3">                        
+                    <img src="images/clients/Audrey-Zeitoun-Coaching.png" alt="Audrey Zeitoun Coaching">
+                    <h4>Audrey Zeitoun Coaching</h4>
                 </div>
-                <div class="center padding-bottom">
-                    <a class="btn-primary" href="/clients">View Clients</a>   
+                <div class="col-3">                    
+                <img src="images/clients/KYOSK.png" alt="KYOSK">
+                <h4>KYOSK</h4>
                 </div>
+                <div class="col-3">                       
+                    <img src="images/clients/Pathways-21.png" alt="Pathways 21">
+                    <h4>Pathways 21</h4>
+                </div>
+                <div class="col-3">                    
+                <img src="images/clients/The-GDPR-Compliance-Consultancy.png" alt="The GDPR Compliance Consultancy">
+                <h4>The GDPR Compliance Consultancy</h4>
+                </div>
+            </div>
+            <div class="center padding-bottom">
+                <a class="btn-primary" href="clients">View All Clients</a>   
             </div>
         </div>
         <div class="events section">
             <div class="container-1000">
-                <h2>NEW! How to Build a Business with Shopify 2020/21</h2>
+                <h2 class="center">NEW! How to Build a Business with Shopify 2020/21</h2>
                 <hr>
                 <div class="row">
                     <div class="col-6">                        
@@ -153,18 +171,18 @@
                     <div class="col-6">                       
                         <p class="padding-bottom">Sybiltech and CNT Associates have partnered together to produce a new webinar
                                 teaching you how to start your e-commerce business using Shopify.</p>
-                        <a class="btn-cnt" href="/events">View Events</a>          
+                        <a class="btn-cnt" href="events">View Events</a>          
                     </div>
                 </div>
             </div>
         </div>
         <div class="testimonials section grey">
             <div class="container-1000">
-                <h2>My Happy Clients!</h2>
+                <h2 class="center">My Happy Clients!</h2>
                 <hr>
                 <div class="row">
                     <div class="col-6">
-                        <div class="shadow-box">                            
+                        <div class="shadow-box center">                            
                             <p>It was a pleasure to work with Sybil to create my Shopify website. 
                                 She has excellent technical skills and is very client-oriented: she 
                                 always asked for my feedback and communicated so I had regular updates
@@ -180,7 +198,7 @@
                         </div>
                     </div>
                     <div class="col-6">
-                        <div class="shadow-box">                            
+                        <div class="shadow-box center">                            
                             <p>Sybil is an outstanding, diligent and dedicated professional, who is
                                  not only highly knowledgeable, but is also a delight to work with!
                                   She provided my organisation with a website audit and I was simply
@@ -197,7 +215,7 @@
                         </div>
                     </div>
                     <div class="col-6">
-                        <div class="shadow-box">                            
+                        <div class="shadow-box center">                            
                             <p>I have been working with Sybil on a range of digital 
                                 service projects. I would highly recommend her, she is highly 
                                 skilled and communicates digital service issues in a way that is 
@@ -213,7 +231,7 @@
                         </div>
                     </div>
                     <div class="col-6">
-                        <div class="shadow-box">                            
+                        <div class="shadow-box center">                            
                             <p>Sybil is extremely thorough and pays great attention to details she 
                                 will adapt to your specific needs. She has helped me choose a 
                                 platform for my domain name and website and is now helping me build 
@@ -259,7 +277,7 @@
                     <h3>Would You Like To Start A Project With Me?</h3>
                     <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
                             I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-secondary" href="/contact">Contact Me</a></div>
+                    <div class="center padding-bottom"><a class="btn-secondary" href="contact.html">Contact Me</a></div>
         </div>
         <div class="footer section">
             <div class="container-1000">
@@ -267,16 +285,16 @@
                     <div class="col-3">
                         <a class="twitter-timeline" data-lang="en" data-height="350" data-theme="dark" 
                         href="https://twitter.com/Sybiltech1?ref_src=twsrc%5Etfw">Tweets by Sybiltech1</a> 
-                        <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+                        <script async src="https://platform.twitter.com/widgets.js"></script>
                     </div>
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="/about">About</a></p>
-                        <p><a href="/services">Services</a></p>
-                        <p><a href="/contact">Contact</a></p>
-                        <p><a href="/terms-and-conditions/">Terms and Conditions</a></p>
-                        <p><a href="/privacy-policy">Privacy Policy</a></p>
+                        <p><a href="about">About</a></p>
+                        <p><a href="services.html">Services</a></p>
+                        <p><a href="contact.html">Contact</a></p>
+                        <p><a href="terms-and-conditions.html">Terms and Conditions</a></p>
+                        <p><a href="privacy-policy.html">Privacy Policy</a></p>
                     </div>
                     <div class="col-3">
                         <h4>Services</h4>
@@ -318,10 +336,10 @@
             function myFunction() {
             var x = document.getElementById("myTopnav");
             if (x.className === "topnav") {
-                x.className += " responsive";
-            } else {
-                x.className = "topnav";
-            }
+                    x.className += " responsive";
+                } else {
+                    x.className = "topnav";
+                }
             }
         </script>
     </body>
