--- a/faqs.html
+++ b/faqs.html
@@ -12,16 +12,14 @@
         <script rel="preconnect" src="https://kit.fontawesome.com/0eae2a52d3.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Web Development &amp; E-Commerce Services for SMEs | Sybiltech</title>       
-        <meta name="Description" content="Sybil Mayard provides web development services for SMEs 
-            in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review.">
-        <meta name="robots" content="noindex">
+        <title>FAQs | Website Development & E-Commerce | Sybiltech</title>       
+        <meta name="Description" content="Sybil Mayard provides website development services for small businesses. Find the answers to your frequently asked questions (FAQs) here.">
+        <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Web Development &amp; E-Commerce Services for SMEs | Sybiltech" />
-        <meta property="og:description" content="Sybil Mayard provides web development services 
-            for SMEs in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review." />
-        <meta property="og:url" content="https://sybilmayard.tech/" />
+        <meta property="og:title" content="FAQs | Website Development & E-Commerce | Sybiltech" />
+        <meta property="og:description" content="Sybil Mayard provides website development services for small businesses. Find the answers to your frequently asked questions (FAQs) here." />
+        <meta property="og:url" content="https://sybilmayard.tech/faqs" />
         <meta property="og:site_name" content="Sybiltech" />
         <meta property="og:image" content="favicon.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -32,7 +30,7 @@
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybilmayard.tech/faqs" />
+        <link rel="canonical" href="https://sybilmayard.tech/faqs/" />
         <link rel="stylesheet" href="styles.css" type="text/css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
@@ -140,7 +138,7 @@
                     <h3>Would You Like To Start A Project With Me?</h3>
                     <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
                             I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-secondary" href="contact.html">Contact Me</a></div>
+                    <div class="center padding-bottom"><a class="btn-contact" href="contact.html">Contact Me</a></div>
         </div>
         <div class="footer section">
             <div class="container-1000">
