--- a/template.html
+++ b/template.html
@@ -12,14 +12,16 @@
         <script rel="preconnect" src="https://kit.fontawesome.com/0eae2a52d3.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contact | SEO and Website Design Services London | Sybiltech</title>       
-        <meta name="Description" content="Sybil Mayard's contact details can be found on this page. Get in touch now to arrange a free consultation or make an enquiry by emailing me.">
+        <title>Web Development &amp; E-Commerce Services for SMEs | Sybiltech</title>       
+        <meta name="Description" content="Sybil Mayard provides web development services for SMEs 
+            in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Contact | SEO and Website Design Services London | Sybiltech" />
-        <meta property="og:description" content="Sybil Mayard's contact details can be found on this page. Get in touch now to arrange a free consultation or make an enquiry by emailing me." />
-        <meta property="og:url" content="https://sybilmayard.tech/contact" />
+        <meta property="og:title" content="Web Development &amp; E-Commerce Services for SMEs | Sybiltech" />
+        <meta property="og:description" content="Sybil Mayard provides web development services 
+            for SMEs in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review." />
+        <meta property="og:url" content="https://sybilmayard.tech" />
         <meta property="og:site_name" content="Sybiltech" />
         <meta property="og:image" content="favicon.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -30,7 +32,7 @@
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybilmayard.tech/contact/" />
+        <link rel="canonical" href="https://sybilmayard.tech/events" />
         <link rel="stylesheet" href="styles.css" type="text/css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
@@ -94,16 +96,14 @@
         </div>
         <div class="hero center">
             <div class="container-1000">
-                <h1>Contact Me</h1>
-                <h4>Enquire now to find out how I can take your business further</h4>               
+                <h1>FAQs</h1>
+                <h4>Frequently asked questions</h4>
+                
             </div>
         </div>
         <div class="main section">
             <div class="container-1000">
-                <h2>Get in Touch</h2>
-                <hr class="left-align">
-                <p>Email me at</p>
-                <h3><a href="mailto:info@sybilmayard.tech">info@sybilmayard.tech</a></h3>
+                <!-- Enter content here -->
             </div>
         </div>
         <div class="contact section">
