--- a/5-best-tools-for-remote-working.html
+++ b/5-best-tools-for-remote-working.html
@@ -12,16 +12,14 @@
         <script rel="preconnect" src="https://kit.fontawesome.com/0eae2a52d3.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Web Development &amp; E-Commerce Services for SMEs | Sybiltech</title>       
-        <meta name="Description" content="Sybil Mayard provides web development services for SMEs 
-            in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review.">
-        <meta name="robots" content="noindex">
+        <title>5 Best Tools for Remote Working | Blog | Sybiltech</title>       
+        <meta name="Description" content="Remote working tools have recently grown in popularity, but which ones are the best for you? Read my article on my 5 favourite tools.">
+        <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Web Development &amp; E-Commerce Services for SMEs | Sybiltech" />
-        <meta property="og:description" content="Sybil Mayard provides web development services 
-            for SMEs in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review." />
-        <meta property="og:url" content="https://sybilmayard.tech/" />
+        <meta property="og:title" content="5 Best Tools for Remote Working | Blog | Sybiltech" />
+        <meta property="og:description" content="Remote working tools have recently grown in popularity, but which ones are the best for you? Read my article on my 5 favourite tools." />
+        <meta property="og:url" content="https://sybilmayard.tech/5-best-tools-for-remote-working" />
         <meta property="og:site_name" content="Sybiltech" />
         <meta property="og:image" content="favicon.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -32,7 +30,7 @@
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybilmayard.tech/events" />
+        <link rel="canonical" href="https://sybilmayard.tech/5-best-tools-for-remote-working/" />
         <link rel="stylesheet" href="styles.css" type="text/css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
@@ -96,21 +94,76 @@
         </div>
         <div class="hero center">
             <div class="container-1000">
-                <h1>FAQs</h1>
-                <h4>Frequently asked questions</h4>
-                
+                <h1>5 Best Tools For Remote Working</h1>
+                <h4></h4>
             </div>
         </div>
         <div class="main section">
             <div class="container-1000">
-                <!-- Enter content here -->
+                <p>With an overwhelming amount of tools available today, it can be a difficult task finding the best ones, especially if you are unfamiliar with working from home. Here I present to you a summary of my 5 favourite tools for remote working, all of which are available for free.</p>
+
+<p>Of course, I can’t go into all the details of what these fantastic apps can offer, but I hope this will give you an overview to help you choose the right applications for your business.</p>
+
+<h2>Free and Premium Plans Compared</h2>
+<h3>Slack</h3>
+<p>Slack is a collaborative workspace hub. Within Slack, you can message co-workers, send files, screenshots and videos, make notes to yourself and more. Slack offers integration with many other applications, including Google Drive, Office 365 and Trello.</p>
+
+<p>Reach different audiences via channels; for instance, you could create a separate channel for each project or department in your organisation, to ensure that your announcements go out to the right groups of people.</p>
+
+<p>One limitation of the free plan is that it only stores up to 10k of message history, so once you reach this limit you will find that you no longer have access to older messages. Also, video calling is restricted to 1-2-1 meetings. However, with the paid versions you have access to an unlimited message archive, group calls and increased security.</p>
+
+<h3>Google Drive</h3>
+<p>Google Drive is my favourite file management application. It’s a convenient way to quickly backup files and share documents with others.</p>
+
+<p>Google Drive is also integrated with Docs, Sheets and Slides: the Google equivalent of Word, Excel and PowerPoint respectively. Create a document directly from Drive and you have instant access to all the main tools and features you’d expect from Microsoft Office, in the cloud.</p>
+
+<p>Need to share large files? No more sending big attachments via email! Simply upload the file to Drive, generate a shareable link and send it to those who require access. You can control who has access to the file (specific people or anyone with the link) and what permissions they have (whether they can view, comment or edit).</p>
+
+<p>The free version of Google Drive offers a generous 15GB of storage, but additional space of up to 30TB can be purchased for a monthly fee.</p>
+
+<p>Google Drive also features a desktop application which allows you to easily sync files on your computer with Drive, making backing up of files effortless.</p>
+
+<h3>Dropbox</h3>
+<p>If you need a simple file hosting solution, Dropbox is for you. Like Google Drive, you can store and share your files with Dropbox. If you install the app on your computer you can access and sync your files directly from your desktop.</p>
+
+<p>Dropbox includes a useful Transfer feature – which you can use to send large files of up to 100MB. The recipient does not need to have a Dropbox account.</p>
+
+<p>Dropbox Basic (free) features 2GB of storage, but you can upgrade to one of the Business plans which provides from 5TB to unlimited storage, according to your needs.</p>
+
+<h3>Trello</h3>
+<p>Trello by Atlassian is a very handy project management tool. Create one board per project. Within each board, you can create lists (e.g. To Do, Doing, Done) and drag & drop cards (tasks) between the lists, great for tracking the progress of a project. Trello can be used for both team projects and individual projects.</p>
+
+<p>With the free version you can have unlimited (personal) boards, lists and cards, so there are no restrictions on how much you can use the application.</p>
+
+<p>The software can be extended with “Power-Ups” – adding extra functionality such as calendars, automation and integration with many other apps.</p>
+
+<p>The paid versions allow you to attach files of up to 250MB, more Power-Ups, increased security and a greater level of automation.</p>
+
+<h3>Zoom</h3>
+<p>Last on my list of favourite tools is Zoom. Undoubtedly, it’s the most popular conference calling software. On the free plan, Zoom offers unlimited calling time for 1-2-1 meetings, and 40 minutes for meetings with more than two participants (up to 100 participants). With a paid plan, you have access to unlimited time on group meetings, cloud storage for recordings, and optional add-ons (such as webinars).</p>
+
+<p>Zoom also features a plugin that allows you to quickly schedule meetings directly from your Outlook meeting invitation!</p>
+
+<p>Due to its recent rise in popularity, Zoom meetings have been subject to the phenomenon of “Zoombombing”, with meetings being joined by uninvited attendees.</p>
+
+<p>Here are a few precautions you can take to prevent mishaps:</p>
+
+<ul>
+    <li>Don’t share the meeting link publicly. Instead, use a system for attendees to register their interest before the event (for example, via Eventbrite). Then you can vet the list and choose with whom to share the link</li>
+    <li>Enable the Waiting Room feature so you have control over who is admitted into the meeting</li>
+    <li>Enable passwords on meetings. Without a password, it is possible to enter a meeting simply by knowing the meeting ID</li>
+    <li>Don’t share sensitive information via a Zoom call</li>
+    <li>Restrict screen sharing to the host only</li>
+    <li>Disable “join before host”</li>
+</ul>
+<p>So that was a quick rundown of my chosen tools, I hope you found it useful. You can also check out my article 6 Tips to Survive Remote Working.</p>
             </div>
         </div>
         <div class="contact section">
                     <h3>Would You Like To Start A Project With Me?</h3>
                     <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
                             I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-secondary" href="contact.html">Contact Me</a></div>
+                    <div class="center padding-bottom"><a class="btn-contact" href="contact.html">Contact Me</a></div>
         </div>
         <div class="footer section">
             <div class="container-1000">
