--- a/an-android-app-for-an-educational-poker-platform.html
+++ b/an-android-app-for-an-educational-poker-platform.html
@@ -12,16 +12,14 @@
         <script rel="preconnect" src="https://kit.fontawesome.com/0eae2a52d3.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>TagNav | Helping You Navigate Your Social Life | Sybiltech</title>       
-        <meta name="Description" content="TagNav is an app concept which helps students find and 
-        attend social events, tackling the feelings of isolation and depression associated with uni life.">
-        <meta name="robots" content="noindex">
+        <title>An Android App for an Educational Poker Platform | Sybiltech</title>       
+        <meta name="Description" content="Sybil Mayard's final MSc project was a Texas Hold'em Poker Android app that teaches you how to play by recommending the best action to take at each round.">
+        <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="VidCareer | Online Career Events for SMEs | Sybiltech" />
-        <meta property="og:description" content="Sybil Mayard&#039;s latest project is VidCareer, a 
-        recruitment platform for online career events and a cost-effective alternative to traditional career fairs." />
-        <meta property="og:url" content="https://sybilmayard.tech/" />
+        <meta property="og:title" content="An Android App for an Educational Poker Platform | Sybiltech" />
+        <meta property="og:description" content="Sybil Mayard's final MSc project was a Texas Hold'em Poker Android app that teaches you how to play by recommending the best action to take at each round." />
+        <meta property="og:url" content="https://sybilmayard.tech/an-android-app-for-an-educational-poker-platform" />
         <meta property="og:site_name" content="Sybiltech" />
         <meta property="og:image" content="favicon.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -32,7 +30,7 @@
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybilmayard.tech/an-android-app-for-an-educational-poker-platform" />
+        <link rel="canonical" href="https://sybilmayard.tech/an-android-app-for-an-educational-poker-platform/" />
         <link rel="stylesheet" href="styles.css" type="text/css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
@@ -126,7 +124,7 @@
                     <h3>Would You Like To Start A Project With Me?</h3>
                     <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
                             I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-secondary" href="contact.html">Contact Me</a></div>
+                    <div class="center padding-bottom"><a class="btn-contact" href="contact.html">Contact Me</a></div>
         </div>
         <div class="footer section">
             <div class="container-1000">
