--- a/blog.html
+++ b/blog.html
@@ -15,14 +15,14 @@
         <title>TagNav | Helping You Navigate Your Social Life | Sybiltech</title>       
         <meta name="Description" content="TagNav is an app concept which helps students find and 
         attend social events, tackling the feelings of isolation and depression associated with uni life.">
-        <meta name="robots" content="noindex">
+        <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
         <meta property="og:title" content="An Android App for an Educational Poker Platform | Sybiltech" />
         <meta property="og:description" content="SSybil Mayard&#039;s final MSc project was a 
         Texas Hold&#039;em Poker Android app that teaches you how to play by recommending the best 
         action to take at each round." />
-        <meta property="og:url" content="https://sybilmayard.tech/" />
+        <meta property="og:url" content="https://sybilmayard.tech" />
         <meta property="og:site_name" content="Sybiltech" />
         <meta property="og:image" content="favicon.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -135,7 +135,7 @@
                     <h3>Would You Like To Start A Project With Me?</h3>
                     <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
                             I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-secondary" href="contact.html">Contact Me</a></div>
+                    <div class="center padding-bottom"><a class="btn-contact" href="contact.html">Contact Me</a></div>
         </div>
         <div class="footer section">
             <div class="container-1000">
