--- a/my-personal-portfolio.html
+++ b/my-personal-portfolio.html
@@ -12,17 +12,14 @@
         <script rel="preconnect" src="https://kit.fontawesome.com/0eae2a52d3.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>TagNav | Helping You Navigate Your Social Life | Sybiltech</title>       
-        <meta name="Description" content="TagNav is an app concept which helps students find and 
-        attend social events, tackling the feelings of isolation and depression associated with uni life.">
-        <meta name="robots" content="noindex">
+        <title>My Personal Portfolio - A Site Made With WordPress | Sybiltech</title>       
+        <meta name="Description" content="Sybil Mayard's personal portfolio is a site created with WordPress, showcasing her skills in music, photography and graphic design. Read more about it here.">
+        <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="An Android App for an Educational Poker Platform | Sybiltech" />
-        <meta property="og:description" content="SSybil Mayard&#039;s final MSc project was a 
-        Texas Hold&#039;em Poker Android app that teaches you how to play by recommending the best 
-        action to take at each round." />
-        <meta property="og:url" content="https://sybilmayard.tech/" />
+        <meta property="og:title" content="My Personal Portfolio - A Site Made With WordPress | Sybiltech" />
+        <meta property="og:description" content="Sybil Mayard's personal portfolio is a site created with WordPress, showcasing her skills in music, photography and graphic design. Read more about it here." />
+        <meta property="og:url" content="https://sybilmayard.tech/my-personal-portfolio" />
         <meta property="og:site_name" content="Sybiltech" />
         <meta property="og:image" content="favicon.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -105,7 +102,8 @@
             <div class="container-1000">
                 <h2>My Personal Blog</h2>
                 <p>VMy first project was a personal website built in WordPress. Please view the 
-                    site by clicking here.</p>
+                    site by clicking <a href="https://sybsblog.wordpress.com" target="_blank" 
+                    rel="noopener noreferrer">here</a>.</p>
            
             </div>
         </div>
@@ -113,7 +111,7 @@
                     <h3>Would You Like To Start A Project With Me?</h3>
                     <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
                             I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-secondary" href="contact.html">Contact Me</a></div>
+                    <div class="center padding-bottom"><a class="btn-contact" href="contact.html">Contact Me</a></div>
         </div>
         <div class="footer section">
             <div class="container-1000">
