--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -12,16 +12,16 @@
         <script rel="preconnect" src="https://kit.fontawesome.com/0eae2a52d3.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Web Development &amp; E-Commerce Services for SMEs | Sybiltech</title>       
+        <title>Privacy Policy | SEO and Website Design London | Sybiltech</title>       
         <meta name="Description" content="Sybil Mayard provides web development services for SMEs 
-            in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review.">
-        <meta name="robots" content="noindex">
+            in Shopify, Squarespace, WordPress and Wix. Read my privacy policy here.">
+        <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Web Development &amp; E-Commerce Services for SMEs | Sybiltech" />
+        <meta property="og:title" content="Privacy Policy | SEO and Website Design London | Sybiltech" />
         <meta property="og:description" content="Sybil Mayard provides web development services 
-            for SMEs in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review." />
-        <meta property="og:url" content="https://sybilmayard.tech/" />
+            for SMEs in Shopify, Squarespace, WordPress and Wix. Read my privacy policy here." />
+        <meta property="og:url" content="https://sybilmayard.tech/privacy-policy" />
         <meta property="og:site_name" content="Sybiltech" />
         <meta property="og:image" content="favicon.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -109,7 +109,7 @@
                     <h3>Would You Like To Start A Project With Me?</h3>
                     <p class="padding-bottom">Please click the contact button to get in touch with me about your requirements. 
                             I look forward to hearing more about your exciting project.</p>
-                    <div class="center padding-bottom"><a class="btn-secondary" href="contact.html">Contact Me</a></div>
+                    <div class="center padding-bottom"><a class="btn-contact" href="contact.html">Contact Me</a></div>
         </div>
         <div class="footer section">
             <div class="container-1000">
