Remove FA CSS and canonical link trailing slash

--- a/webtip-wednesday-series-launched-on-twitter.html
+++ b/webtip-wednesday-series-launched-on-twitter.html
@@ -30,13 +30,12 @@
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybilmayard.tech/webtip-wednesday-series-launched-on-twitter/" />
+        <link rel="canonical" href="https://sybilmayard.tech/webtip-wednesday-series-launched-on-twitter" />
         <link rel="stylesheet" href="styles.css" type="text/css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,700&display=swap" rel="stylesheet">
         <link rel="icon" type="image/png" href="favicon.png">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div class="header">
@@ -125,7 +124,7 @@
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="about">About</a></p>
+                        <p><a href="about.html">About</a></p>
                         <p><a href="services.html">Services</a></p>
                         <p><a href="contact.html">Contact</a></p>
                         <p><a href="terms-and-conditions.html">Terms and Conditions</a></p>
