--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <meta property="og:title" content="Web Development &amp; E-Commerce Services for SMEs | Sybiltech" />
         <meta property="og:description" content="Sybil Mayard provides web development services 
             for SMEs in Shopify, Squarespace, WordPress and Wix. Contact me for a free consultation or website review." />
-        <meta property="og:url" content="https://sybilmayard.tech" />
+        <meta property="og:url" content="https://sybilmayard.tech/" />
         <meta property="og:site_name" content="Sybiltech" />
         <meta property="og:image" content="favicon.png" />
         <meta name="twitter:card" content="summary_large_image" />
@@ -38,7 +38,6 @@
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,700&display=swap" rel="stylesheet">
         <link rel="icon" type="image/png" href="favicon.png">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div class="header">
@@ -99,7 +98,7 @@
                 <h4>Taking your online business further...</h4>
                 <h1>Sybiltech</h1>
                 <p class="padding-bottom">A freelance IT consultant who can help you achieve your goals.</p>
-                <a class="btn-primary" href="services">More Info</a>
+                <a class="btn-primary" href="services">My Services</a>
             </div>
         </div>
         <div class="services section">
@@ -290,7 +289,7 @@
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="about">About</a></p>
+                        <p><a href="about.html">About</a></p>
                         <p><a href="services.html">Services</a></p>
                         <p><a href="contact.html">Contact</a></p>
                         <p><a href="terms-and-conditions.html">Terms and Conditions</a></p>
