Add T&Cs, privacy policy and .gitignore

--- a/building-business-shopify.html
+++ b/building-business-shopify.html
@@ -30,13 +30,12 @@
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybilmayard.tech/building-business-shopify/" />
+        <link rel="canonical" href="https://sybilmayard.tech/building-business-shopify" />
         <link rel="stylesheet" href="styles.css" type="text/css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,700&display=swap" rel="stylesheet">
         <link rel="icon" type="image/png" href="favicon.png">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div class="header">
@@ -108,20 +107,24 @@
                     include setting up your store, customising your theme, managing products and 
                     much more.</p>
                 <div class="center">
-                    <a class="btn-cnt" href="https://cntassociates.com/courses.asp">More Information</a>
+                    <a class="btn-cnt" href="https://cntassociates.com/courses.asp" target="_blank" 
+                    rel="noopener noreferrer">More Information</a>
                 </div>
                 <p class="padding-top padding-bottom">Bonus: watch our free Intro video below to learn why you should be using Shopify 
                     for your e-commerce business.</p>
                 <div class="center">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/u-fxoSL6cQU" 
-                    frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
-                    gyroscope; picture-in-picture" allowfullscreen>
-                    </iframe>
+                    <div class="videoWrapper">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/u-fxoSL6cQU" 
+                        frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+                        gyroscope; picture-in-picture" allowfullscreen>
+                        </iframe>
+                    </div>
                 </div>
-                <p><em>In partnership with...</em></p>
+                <p class="padding-top"><em>In partnership with...</em></p>
                 <div class="center">
                     <a href="https://cntassociates.com" target="_blank" rel="noopener noreferrer">
-                        <img src="images/CNT_Associates-Empowering-Your-Vision.png" alt="CNT Associates Empowering Your Vision">
+                        <img src="images/CNT_Associates-Empowering-Your-Vision.png" 
+                            alt="CNT Associates Empowering Your Vision">
                     </a>
                 </div>
                 <h3>Why Use Shopify...</h3>
@@ -152,7 +155,7 @@
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="about">About</a></p>
+                        <p><a href="about.html">About</a></p>
                         <p><a href="services.html">Services</a></p>
                         <p><a href="contact.html">Contact</a></p>
                         <p><a href="terms-and-conditions.html">Terms and Conditions</a></p>
