--- a/events.html
+++ b/events.html
@@ -30,19 +30,19 @@
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybilmayard.tech/events/" />
+        <link rel="canonical" href="https://sybilmayard.tech/events" />
         <link rel="stylesheet" href="styles.css" type="text/css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,700&display=swap" rel="stylesheet">
         <link rel="icon" type="image/png" href="favicon.png">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div class="header">
             <div class="container-1000">
                 <div class="logo">
-                    <a href="index.html"><img src="images/sybiltech-logo-small.jpg" alt="Sybiltech logo"></a>
+                    <a href="index.html"><img src="images/sybiltech-logo-small.jpg" 
+                        alt="Sybiltech logo"></a>
                 </div>
             </div>
         </div>
@@ -69,7 +69,8 @@
                         </button>
                         <div class="dropdown-content">
                             <a href="vidcareer.html">VidCareer</a>
-                            <a href="an-android-app-for-an-educational-poker-platform.html">An Android App for an Educational Poker Platform</a>
+                            <a href="an-android-app-for-an-educational-poker-platform.html">An 
+                                Android App for an Educational Poker Platform</a>
                             <a href="tagnav.html">TagNav</a>
                             <a href="my-personal-portfolio.html">My Personal Portfolio</a>
                         </div>
@@ -106,7 +107,8 @@
                     register, click the relevant link below.</p>
                 <div class="row">
                     <div class="col-4">
-                        <img src="images/E-commerce-online-shopping-laptop-credit-cards-and-smartphone-on-desk.jpg" alt="E-commerce">
+                        <img src="images/E-commerce-online-shopping-laptop-credit-cards-and-smartphone-on-desk.jpg" 
+                            alt="E-commerce">
                     </div>
                     <div class="col-8">
                         <h2>An Introduction to Building a Business Using Shopify</h2>
@@ -130,13 +132,15 @@
                             <li>Information, advice and guidance on the next steps</li>
                        </ul>
                         <div class="padding-top">
-                            <a class="btn-cnt" href="https://www.eventbrite.co.uk/e/shopify-an-introduction-to-using-it-to-build-an-online-store-free-tickets-131349416641" target="_blank" rel="noopener noreferrer">Register Now</a>
+                            <a class="btn-cnt" href="https://www.eventbrite.co.uk/e/shopify-an-introduction-to-using-it-to-build-an-online-store-free-tickets-131349416641"                           
+                                target="_blank" rel="noopener noreferrer">Register Now</a>
                         </div>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-4">
-                        <img src="images/E-commerce-online-shopping-laptop-credit-cards-and-smartphone-on-desk.jpg" alt="E-commerce">
+                        <img src="images/E-commerce-online-shopping-laptop-credit-cards-and-smartphone-on-desk.jpg" 
+                            alt="E-commerce">
                     </div>
                     <div class="col-8">
                         <h2>Using Shopify to Build an Online Store for Your Organisation - Stage 2</h2>
@@ -166,14 +170,16 @@
                         <p>Additional packages and resources are available; please email us on 
                             <a href="mailto:info@cntassociates.com">info@cntassociates.com</a> for details.</p>
                         <div class="padding-top">
-                            <a class="btn-cnt" href="https://www.eventbrite.co.uk/e/using-shopify-to-build-an-online-store-for-your-organisation-stage-2-tickets-131171490459?aff=erelpanelorg" target="_blank" rel="noopener noreferrer">Register Now</a>
+                            <a class="btn-cnt" href="https://www.eventbrite.co.uk/e/using-shopify-to-build-an-online-store-for-your-organisation-stage-2-tickets-131171490459" 
+                            target="_blank" rel="noopener noreferrer">Register Now</a>
                         </div>
                     </div>
                 </div>
                 <p><em>In partnership with...</em></p>
                 <div class="center">
                     <a href="https://cntassociates.com" target="_blank" rel="noopener noreferrer">
-                        <img src="images/CNT_Associates-Empowering-Your-Vision.png" alt="CNT Associates Empowering Your Vision">
+                        <img src="images/CNT_Associates-Empowering-Your-Vision.png" 
+                            alt="CNT Associates Empowering Your Vision">
                     </a>
                 </div>
             </div>
@@ -195,7 +201,7 @@
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="about">About</a></p>
+                        <p><a href="about.html">About</a></p>
                         <p><a href="services.html">Services</a></p>
                         <p><a href="contact.html">Contact</a></p>
                         <p><a href="terms-and-conditions.html">Terms and Conditions</a></p>
