--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -32,13 +32,12 @@
         <meta name="twitter:label2" content="Estimated reading time">
         <meta name="twitter:data2" content="2 minutes">
         <meta name="google-site-verification" content="4CQdjA8VuHHdJlLAeL33JXUNCcg92x6Yy2MK2H-F5rs" />
-        <link rel="canonical" href="https://sybilmayard.tech/terms-and-conditions/" />
+        <link rel="canonical" href="https://sybilmayard.tech/terms-and-conditions" />
         <link rel="stylesheet" href="styles.css" type="text/css">
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Varela+Round&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,700&display=swap" rel="stylesheet">
         <link rel="icon" type="image/png" href="favicon.png">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     </head>
     <body>
         <div class="header">
@@ -102,7 +101,84 @@
         </div>
         <div class="main section">
             <div class="container-1000">
-                <!-- Enter content here -->
+                <h2>Terms and Conditions</h2>
+                <p>These terms and conditions are the contract between you and Sybil Mayard trading as Sybiltech (“us”, “we”, etc). By visiting or using Our Website, you agree to be bound by them.</p>
+
+                <p>They are based on a set written by Net Lawman and released under licence. They protect your rights as well as ours.</p>
+
+                <p>I am Sybil Mayard, a sole trader registered in the United Kingdom.</p>
+
+                <p>You are: Anyone who uses Our Website.</p>
+
+                <p>Please read this agreement carefully and save it. If you do not agree with it, you should leave Our Website immediately.</p>
+
+                <p>These are the agreed terms:</p>
+
+                <h3>1. Definitions</h3>
+                <p>“Content” means the textual, visual or aural content that is encountered as part of your experience on Our Website. It may include, among other things: text, images, sounds, videos and animations.</p>
+
+                <p>“Intellectual Property” means intellectual property owned by us, of every sort, whether or not registered or registrable in any country, including intellectual property of all kinds coming into existence after today; and including, among others, patents, trade marks, unregistered marks, designs, copyrights, software, domain names, discoveries, creations and inventions, together with all rights which are derived from those rights.</p>
+
+                <p>“Our Website” means any website or service designed for electronic access by mobile or fixed devices which is owned or operated by us.<br>
+                “Services” means the service provided from Our Website.</p>
+
+                <h3>2. Children on Our Website</h3>
+                <p>
+                    2.1. Whatever the age of consent in your country, we are anxious that they should be protected from unsuitable<br> Content. To protect your children, you should know our policy, which is as follows:<br> 
+                    2.2. In the children categories, our volunteers have checked both the entries, and, where relevant, the links.<br> 
+                    2.3. We do not knowingly collect personal information from any person under the age of 16 years.<br> 
+                    2.4. Any person of any age may freely access any page of Our Website. We do not check identities nor moderate Content.<br> 
+                    2.5. It is you, not we, who provide access to Our Website for the children in your care. It is for you to check that the Content your children might see is suitable for them.<br> 
+                    2.6. Where links are concerned, you may like to check the privacy policies of those sites where your children might visit frequently to see how they collect and use information.<br> 
+                    2.7. Filter software may also be useful to you.<br> 
+                    2.8. You acknowledge that we are not responsible for Content that anyone has placed on Our Website for the content of site accessible by a link from Our Website.<br> 
+                    2.9. You now agree to waive any claim you may otherwise have against us on account of age-related suitability of Content and to indemnify us against any claim made by any person on behalf of a child in your care.<br> 
+                </p>
+
+                <h3>3. Intellectual Property</h3>
+                <p>You agree that at all times you will:</p>
+                <p>
+                    3.1. not do anything which does or might reduce the value of our Intellectual Property or challenge our ownership of it.<br> 
+                    3.2. notify us of any suspected infringement of the Intellectual Property;<br>
+                    3.3. so far as concerns our work provided or made accessible by us to you, you will not:<br>
+                    3.3.1 copy, or make any change to any part of its code;<br>
+                    3.3.2 use it in any way not anticipated by this agreement;<br>
+                    3.3.3 give access to it to any other person than you, the licensee in this agreement;<br>
+                    3.3.4 in any way provide any information about it to any other person or generally.<br>
+                    3.4. not use the Intellectual Property except directly as intended by this agreement or in our interest.<br>
+                </p>
+
+                <h3>4. Disclaimers and limitation of liability</h3>
+                <p>
+                    4.1. The law differs from one country to another. This paragraph applies so far as the applicable law allows.<br>
+                    4.2. All implied conditions, warranties and terms are excluded from this agreement. If in any jurisdiction an implied condition, warrant or term cannot be excluded, then this sub paragraph shall be deemed to be reduced in effect, only to the extent necessary to release that specific condition, warranty or term.<br>
+                    4.3. You are advised that Content may include technical inaccuracies or typographical errors. This is inevitable in any large website. We would be grateful if you bring to our immediate attention, any that you find.<br>
+                    4.4. Our Website contains links to other internet websites. We have neither power nor control over any such website. You acknowledge and agree that we shall not be liable in any way for the Content of any such linked website, nor for any loss or damage arising from your use of any such website or from your buying services or goods via such a website.<br>
+                    4.5. The Sybil Mayard trading as Sybiltech Website and Sybil Mayard trading as Sybiltech Services are provided “as is”. We make no representation or warranty that Our Website will be:<br>
+                    4.5.1 useful to you;<br>
+                    4.5.2 of satisfactory quality;<br>
+                    4.5.3 fit for a particular purpose;<br>
+                    4.5.4 available or accessible, without interruption, or without error.<br>
+                    4.6. We claim no expert knowledge in any subject. We disclaim any obligation or liability to you arising directly or indirectly from information you take from Our Website.<br>
+                    4.7. We accept no responsibility for third party advertisements which are posted on Our Website or through the Services;<br>
+                    4.8. We shall not be liable to you for any loss or expense which is:<br>
+                    4.8.1 indirect or consequential loss; or<br>
+                    4.8.2 economic loss or other loss of turnover, profits, business or goodwill even if such loss was reasonably foreseeable or we knew you might incur it.<br>
+                    4.9. This paragraph (and any other paragraph which excludes or restricts our liability) applies to our directors, officers, employees, subcontractors, agents and affiliated companies (who may enforce this clause under the Contracts (Rights of Third Parties) Act 1999 as well as to ourselves.<br>
+                </p>
+
+                <h3>5. Miscellaneous matters</h3>
+                <p>
+                    5.1. Our privacy policy is strong and precise. It complies fully with the Data Protection Act 2018 which is at <a href="privacy-policy.html">https://sybilmayard.tech/privacy-policy</a>.<br>
+                    5.2. If any term or provision of this agreement is at any time held by any jurisdiction to be void, invalid or unenforceable, then it shall be treated as changed or reduced, only to the extent minimally necessary to bring it within the laws of that jurisdiction and to prevent it from being void and it shall be binding in that changed or reduced form. Subject to that, each provision shall be interpreted as severable and shall not in any way affect any other of these terms.<br>
+                    5.3. No failure or delay by any party to exercise any right, power or remedy will operate as a waiver of it nor indicate any intention to reduce that or any other right in the future.<br>
+                    5.4. Any communication to be served on either party by the other shall be delivered by hand or sent by first class post or by e-mail.<br>
+                    It shall be deemed to have been delivered:<br>
+                    if delivered by hand: on the day of delivery;<br>
+                    if sent by post to the correct address: within 72 hours of posting;<br>
+                    If sent by e-mail to the address from which the receiving party has last sent e-mail: within 24 hours if no notice of non-receipt has been received by the sender.<br>
+                    5.5. The validity, construction and performance of this agreement shall be governed by the laws of England and Wales and you agree that any dispute arising from it shall be litigated only in that country.<br>
+                </p>
             </div>
         </div>
         <div class="contact section">
@@ -122,7 +198,7 @@
                     <div class="col-3">
                         <h4>Links</h4>
                         <p><a href="/">Home</a></p>
-                        <p><a href="about">About</a></p>
+                        <p><a href="about.html">About</a></p>
                         <p><a href="services.html">Services</a></p>
                         <p><a href="contact.html">Contact</a></p>
                         <p><a href="terms-and-conditions.html">Terms and Conditions</a></p>
