--- a/clients.html
+++ b/clients.html
@@ -268,10 +268,9 @@
             </div>
             </div>
         </div>
-        <div class="copyright section center"><p>Copyright &copy; 
-            <script>
-                document.write(new Date().getFullYear())
-            </script> Sybiltech | Website developed by <a href="/">Sybiltech</a></p></div>
+        <div class="copyright section center"><p>Copyright &copy;           
+            <span id="year"></span> Sybiltech | Website developed by <a href="/">Sybiltech</a></p>
+        </div>
         <script>
             function myFunction() {
             var x = document.getElementById("myTopnav");
@@ -281,6 +280,7 @@
                     x.className = "topnav";
                 }
             }
+            document.getElementById("year").innerHTML = new Date().getFullYear();
         </script>
     </body>
 </html>
