Update page titles

--- a/about.html
+++ b/about.html
@@ -12,13 +12,13 @@
         <script rel="preconnect" src="https://kit.fontawesome.com/0eae2a52d3.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>About | Web Development & E-commerce Services | Sybiltech</title>       
+        <title>About | Web Development & E-Commerce Services | Sybiltech</title>       
         <meta name="Description" content="Sybil Mayard is a freelance web developer. She graduated 
         from the University of Kent with an MSc in Computer Science. Read about her experiences here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="About | Web Development & E-commerce Services | Sybiltech" />
+        <meta property="og:title" content="About | Web Development & E-Commerce Services | Sybiltech" />
         <meta property="og:description" content="Sybil Mayard is a freelance web developer. She 
         graduated from the University of Kent with an MSc in Computer Science. Read about her experiences here." />
         <meta property="og:url" content="https://sybilmayard.tech/about" />
