--- a/clients.html
+++ b/clients.html
@@ -12,12 +12,12 @@
         <script rel="preconnect" src="https://kit.fontawesome.com/0eae2a52d3.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Clients | Web Development & E-commerce Services | Sybiltech</title>       
+        <title>Clients | Web Development & E-Commerce Services | Sybiltech</title>       
         <meta name="Description" content="Sybil Mayard has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of projects here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Clients | Web Development & E-commerce Services | Sybiltech" />
+        <meta property="og:title" content="Clients | Web Development & E-Commerce Services | Sybiltech" />
         <meta property="og:description" content="Sybil Mayard has worked with a range of clients, providing the services needed to help them achieve their business goals. See a selection of projects here." />
         <meta property="og:url" content="https://sybilmayard.tech/clients" />
         <meta property="og:site_name" content="Sybiltech" />
