--- a/contact.html
+++ b/contact.html
@@ -12,12 +12,12 @@
         <script rel="preconnect" src="https://kit.fontawesome.com/0eae2a52d3.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Contact | SEO and Website Design Services London | Sybiltech</title>       
+        <title>Contact | Web Development & E-Commerce Services | Sybiltech</title>       
         <meta name="Description" content="Sybil Mayard's contact details can be found on this page. Get in touch now to arrange a free consultation or make an enquiry by emailing me.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Contact | SEO and Website Design Services London | Sybiltech" />
+        <meta property="og:title" content="Contact | Web Development & E-Commerce Services | Sybiltech" />
         <meta property="og:description" content="Sybil Mayard's contact details can be found on this page. Get in touch now to arrange a free consultation or make an enquiry by emailing me." />
         <meta property="og:url" content="https://sybilmayard.tech/contact" />
         <meta property="og:site_name" content="Sybiltech" />
