--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -12,13 +12,13 @@
         <script rel="preconnect" src="https://kit.fontawesome.com/0eae2a52d3.js" crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Terms & Conditions | SEO & Website Design London | Sybiltech</title>       
+        <title>Terms & Conditions | Web Development E-Commerce | Sybiltech</title>       
         <meta name="Description" content="Sybil Mayard provides web development services for SMEs 
             in Shopify, Squarespace, WordPress and Wix. Read my terms and conditions here.">
         <meta name="robots" content="all">
         <meta property="og:locale" content="en_GB" />
         <meta property="og:type" content="website" />
-        <meta property="og:title" content="Terms & Conditions | SEO & Website Design London | Sybiltech" />
+        <meta property="og:title" content="Terms & Conditions | Web Development E-Commerce | Sybiltech" />
         <meta property="og:description" content="Sybil Mayard provides web development services 
             for SMEs in Shopify, Squarespace, WordPress and Wix. Read my terms and conditions here." />
         <meta property="og:url" content="https://sybilmayard.tech/terms-and-conditions" />
